# mtg_price_checker

./: .gitignore  README.md  input.txt  mtg_price_checker.py  pyproject.toml
src/cardmarket_scraper/: __init__.py  main.py
src/cardmarket_scraper/config/: __init__.py  settings.py
src/cardmarket_scraper/reporting/: __init__.py  report_generator.py
src/cardmarket_scraper/scraper/: __init__.py  cardmarket.py
src/cardmarket_scraper/utils/: __init__.py  deck_utils.py
