[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cardmarket-scraper"
version = "0.1.0"
description = "A tool to scrape Magic: The Gathering card prices from CardMarket"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "selenium==4.25.0",
    "webdriver-manager==4.0.2",
    "tabulate==0.9.0",
    "requests==2.32.3",
    "urllib3==2.2.2"
]

[project.optional-dependencies]
dev = ["pytest==8.3.3"]

[project.scripts]
cardmarket-scraper = "cardmarket_scraper.main:main"

[tool.setuptools.packages.find]
where = ["src"]